<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_activity_label">Login to Garanbo</string>
    <string name="account_label">Garanbot</string>
    <string name="account_type">net.sourcewalker.garanbot.account</string>
    <string name="app_name">Garanbot</string>
    <string name="input_user">Username:</string>
    <string name="input_password">Password:</string>
    <string name="input_login">Login</string>
    <string name="login_register">Register new account</string>
    <string name="menu_add">Add item</string>
    <string name="menu_load">Start Sync...</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="prefs_username_key">login.username</string>
    <string name="prefs_username_default"></string>
    <string name="prefs_password_key">login.password</string>
    <string name="prefs_password_default"></string>
    <string name="toast_account_createfailed">Failed to create account! Try again...</string>
    <string name="toast_account_onlyone">Can not create more than one account of that type!</string>
    <string name="toast_loginerror">Wrong username/password!</string>
    <string name="toast_loginfailed">Login failed! Check your credentials and try again...</string>
    <string name="toast_needaccount">Please create an account to use this application.</string>
    <string name="toast_view_itemnotfound">Database error: item could not be retrieved!</string>
    <string name="toast_view_itemerror">Error loading item!</string>
    <string name="toast_view_pictureerror">Error loading picture!</string>
    <string name="item_view_manufacturer">Manufacturer:</string>
    <string name="item_view_model">Model:</string>
    <string name="item_view_vendor">Vendor:</string>
    <string name="item_view_location">Location:</string>
    <string name="item_view_details">Details</string>
    <string name="item_view_warranty">Warranty</string>
    <string name="item_view_purchase">Purchase date:</string>
    <string name="item_view_endwarranty">End of warranty:</string>
    <string name="item_view_notes">Notes</string>
    <string name="item_edit_name_hint">Name</string>
    <string name="item_edit_manufacturer_hint">Manufacturer</string>
    <string name="item_edit_model_hint">Model</string>
    <string name="item_edit_vendor_hint">Vendor</string>
    <string name="item_edit_location_hint">Location</string>
    <string name="item_edit_notes_hint">Notes</string>
    <string name="toast_list_deleteerror">Error deleting item!</string>
    <string name="list_empty">No items on device! Please synchronize with server or create an item...</string>
    <string name="list_warnsync">Sync is disabled! Click here to enable...</string>
    <string name="view_edit">Edit item</string>
    <string name="edit_save">Save</string>
    <string name="edit_scan">Scan barcode</string>
    <string name="edit_barcode_dialog_title">Barcode search...</string>
    <string name="edit_barcode_dialog_confirm">Scanned code: %s\n\nIs this correct?</string>
    <string name="edit_barcode_dialog_progress">Searching for products with code %s...</string>
    <string name="edit_barcode_dialog_result">Product found:\n%s\n\nApply to item?</string>
    <string name="scan_install_title">Additional software needed</string>
    <string name="scan_install_message">To scan a barcode you will have to install additional software from the Android Market. Do you want to do that?</string>
    <string name="scan_cancelled">Barcode recognition was cancelled.</string>
    <string name="toast_scan_not_found">We are sorry, the product was not found!</string>
    <string name="register_title">Register new account</string>
    <string name="register_ok">Register</string>
    <string name="register_user">Desired username:</string>
    <string name="register_password">Password:</string>
    <string name="register_password_check">Password (repeat):</string>
    <string name="register_name">Your full name:</string>
    <string name="register_email">Your email address:</string>
    <string name="register_username_error">Please enter a username!</string>
    <string name="register_password_error">Please use at least eight characters!</string>
    <string name="register_passwordcheck_error">Passwords do not match!</string>
    <string name="register_name_error">Please enter your name!</string>
    <string name="register_email_error">Please enter a valid email address!</string>
</resources>
