<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ViewItemBackground">
            <ImageView
                android:id="@+id/item_view_image"
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:padding="8dip"
                android:src="@drawable/item_nopicture" />
            <TextView
                android:text="Name"
                android:id="@+id/item_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/item_view_image"
                android:layout_alignBottom="@id/item_view_image"
                android:padding="10dip"
                android:textSize="12pt"
                android:typeface="serif" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dip"
            android:background="@drawable/bottom_gradient" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow
                style="@style/ViewItemHeader">
                <TextView
                    style="@style/ViewItemHeaderText"
                    android:text="@string/item_view_details" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dip"
                    android:layout_span="2"
                    android:background="@drawable/top_gradient" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowHeader"
                    android:text="@string/item_view_manufacturer" />
                <TextView
                    style="@style/ViewItemRowData"
                    android:text="Manufacturer"
                    android:id="@+id/item_view_manufacturer" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowHeader"
                    android:text="@string/item_view_model" />
                <TextView
                    style="@style/ViewItemRowData"
                    android:text="Model"
                    android:id="@+id/item_view_model" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowHeader"
                    android:text="@string/item_view_location" />
                <TextView
                    style="@style/ViewItemRowData"
                    android:text="Location"
                    android:id="@+id/item_view_location" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dip"
                    android:layout_span="2"
                    android:background="@drawable/bottom_gradient" />
            </TableRow>
            <TableRow
                style="@style/ViewItemHeader">
                <TextView
                    style="@style/ViewItemHeaderText"
                    android:text="@string/item_view_warranty" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dip"
                    android:layout_span="2"
                    android:background="@drawable/top_gradient" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowHeader"
                    android:text="@string/item_view_vendor" />
                <TextView
                    style="@style/ViewItemRowData"
                    android:text="Vendor"
                    android:id="@+id/item_view_vendor" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowHeader"
                    android:text="@string/item_view_purchase" />
                <TextView
                    style="@style/ViewItemRowData"
                    android:text="Purchase Date"
                    android:id="@+id/item_view_purchase" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowHeader"
                    android:text="@string/item_view_endwarranty" />
                <TextView
                    style="@style/ViewItemRowData"
                    android:text="End of warranty"
                    android:id="@+id/item_view_endwarranty" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dip"
                    android:layout_span="2"
                    android:background="@drawable/bottom_gradient" />
            </TableRow>
            <TableRow
                style="@style/ViewItemHeader">
                <TextView
                    style="@style/ViewItemHeaderText"
                    android:text="@string/item_view_notes" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dip"
                    android:layout_span="2"
                    android:background="@drawable/top_gradient" />
            </TableRow>
            <TableRow
                style="@style/ViewItemRow">
                <TextView
                    style="@style/ViewItemRowData"
                    android:layout_span="2"
                    android:id="@+id/item_view_notes"
                    android:text="Notes" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
